test/inputs/fail_exist_T2.fw
#option "fail" 

let x =
  let f (x : int) = x in <int, (f, 1) as exi a. (a -> int) * a>

let y = let <a, fv> = x in fv.1, fv.2
